# libdftw

./: .gitignore  COPYING  HACKING.md  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  common.mk  configure  configure.ac  libdftw.h  libdftw.pc.in  libdftw.spec
example/: Makefile.am  libdftw_example.c  libdftw_example.h
libdftw/: dftw.c  dftw.h  log.h
tests/: Makefile.am  Makefile.in  dftw_test.c
